[tool.poetry]
name = "facebook-photos-download"
version = "0.1.0"
description = "Get photos of you from Facebook"
authors = ["Joe Contini", "Brodie Blackburn"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
requests = "^2.25.1"
click = "^7.1.2"
python-dateutil = "^2.8.1"
exif = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
