[tool.poetry]
name = "facebook-photos-download"
version = "0.1.0"
description = "Get photos of you from Facebook"
authors = ["Joe Contini", "Brodie Blackburn"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
requests = "^2.25.1"
click = "^7.1.2"
python-dateutil = "^2.8.1"
exif = "^1.2.0"
chromedriver-binary = "^123.0.6312.10.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
