[tool.poetry]
name = "facebook-photos-download"
version = "0.1.0"
description = "Get photos of you from Facebook"
authors = ["Joe Contini", "Brodie Blackburn"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
requests = "^2.25.1"
click = "^7.1.2"
python-dateutil = "^2.9.0"
exif = "^1.2.0"
chromedriver-binary = "^124.0.6330.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
